@@ -1,3 +1,10 @@
+2011-03-23  Mike Frysinger  <vapier@gentoo.org>
+
+	* machs.c (bf50x_dev, bf512_dev, bf516_dev, bf522_dev, bf526_dev,
+	bf533_dev, bf534_dev, bf537_dev, bf538_dev, bf561_dev, bf592_dev):
+	Change bfin_gpio addresses from f/g/h to 5/6/7.
+	(bfin_model_hw_tree_init): Add the bfin_gpio address base to 'a'.
+
 2011-03-17  Mike Frysinger  <vapier@gentoo.org>
 
 	* configure.ac (AC_CHECK_FUNCS): Check for kill and pread.
